Modulo 12 Cypress concluido

--- a/Exercicios/Modulos-11-12-Cypress/package.json
+++ b/Exercicios/Modulos-11-12-Cypress/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cy.open": "npx cypress open",
+    "cy.run": "npx cypress run --browser chrome",
+    "cy.relatorio": "npx cypress run --record --key 3e147f81-6e39-4bf6-b960-53ac0c918c71"
   },
   "keywords": [],
   "author": "",
