--- a/Exercicios/Modulo-12-cypress/package.json
+++ b/Exercicios/Modulo-12-cypress/package.json
@@ -2,5 +2,12 @@
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
     "cypress": "^12.6.0"
+  },
+
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cy.open": "npx cypress open",
+    "cy.run": "npx cypress run",
+    "cy.relatorio": "npx cypress run --record --key a38d741b-4cae-4c40-a30b-677b9fa69a17 --browser chrome"
   }
 }
