--- a/Exercicios/Modulo-14-API-REST/package.json
+++ b/Exercicios/Modulo-14-API-REST/package.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "cypress": "^12.5.1"
   },
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "cy.open": "npx cypress open",
